# vapor-locker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  HOWTO.fr.md  README.md  docker-compose.yml
docs/: SRC_OVERVIEW.md
migrations/: 0001_create_entries.sql  0002_add_salts_and_key_hash.sql
src/: csrf.rs  db.rs  handlers.rs  logging.rs  main.rs  models.rs  security.rs
static/: app.js  index.html
