[package]
name = "vapor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "form"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
cookie = "0.18"
dotenvy = "0.15"
file-rotate = "0.7"
moka = { version = "0.12", features = ["sync"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate", "macros", "time"] }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-cookies = "0.10"
tower-http = { version = "0.6", features = ["fs", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

